--- a/style.css
+++ b/style.css
@@ -1,7 +1,5 @@
 body{ 
     background:linear-gradient(to bottom, rgb(4, 91, 91), #255, rgb(53, 201, 201));
-    background-repeat: no-repeat;
-    background-size: 100%;
 }
 
 h1{
@@ -10,19 +8,34 @@ h1{
     font-size: 50px;
 }
 
-#card1, #card2, #card3, #card4, #card5, #card6, #card7, #card8 {
-    border: 2px;
-    border-color: black;
-    color:black;
-    margin-right: 70px;
-    margin-left: 70px;
-    margin-bottom: 70px; 
-    margin-top: 70px;
+#card1, #card2, #card3{
+    margin: 5px;
+    height: 250px;
+    width: 175px;
+    border: 2px solid white;
+    border-radius: 3%;
+    background-color: black;
+    color: rgb(104, 99, 99);
+    display: inline-block;
+
 }
+
+#card4, #card5, #card6{
+    margin: 5px;
+    height: 250px; 
+    width: 175px; 
+    border: 2px solid white;
+    border-radius: 3%;
+    background-color: black;
+    color: rgb(75, 71, 71);
+    display: inline-block;
+
+} 
 
 .theCards{
     text-align: center;
     display: flexbox;
+
 }
 
 #bubble1{
@@ -87,3 +100,4 @@ h1{
     border-radius: 50%;
     display: inline-block;
 }
+
